--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,19 @@
 <div class="row">
+{{#each posts as |post|}}
+<div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card mt-4">
+      <div class="card-body">
+        <h5 class="card-title">{{post.title}}</h5>
+        <p class="card-text">{{post.contents}}</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+{{/each}}
+</div>
+
+
+{{!-- <div class="row">
   <div class="col-sm-6 mb-3 mb-sm-0">
     <div class="card mt-4">
       <div class="card-body">
@@ -7,14 +22,5 @@
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card mt-4">
-      <div class="card-body">
-        <h5 class="card-title">Tech is cheesy</h5>
-        <p class="card-text">New Dairy technology on the rise!</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-</div>
+  </div> --}}
+  
