--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -4,7 +4,7 @@
 
 <form class="row mb-4" action="">
     <div class="col-md-4">
-        <label class="form-label" for="userNameBox">Username</label> <input class="form-control" id="userNameBox" type="text">
+        <label class="form-label" for="emailBox">Email</label> <input class="form-control" id="emailBox" type="text">
         <label class="form-label" for="userPasswordBox">Password</label> <input class="form-control" id="userPasswordBox" type="text">
     </div>
     <div class="col-md-8"></div>
@@ -23,8 +23,8 @@
 <h2>Sign up!</h2>
 <form class="row" action="">
     <div class="col-md-4">
-<label class="form-label" for="signupNameBox">Username</label> <input class="form-control" id="signupNameBox" type="text">  
-<label class="form-label" for="signupEmailBox">Email</label> <input class="form-control" id="signupEmailBox" type="text">
+<label class="form-label" for="signupNameBox">Email</label> <input class="form-control" id="signupNameBox" type="text">  
+
 <label class="form-label" for="signupPasswordBox">Password</label> <input class="form-control" id="signupPasswordBox" type="text">
  </div><div class="col-md-8"></div>
 </form>
