--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
       <div class="card-body">
         <h5 class="card-title">{{post.title}}</h5>
         <p class="card-text">{{post.contents}}</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="/blogposts/{{post.id}}" class="btn btn-primary">View Post!</a>
       </div>
     </div>
   </div>
@@ -13,14 +13,3 @@
 </div>
 
 
-{{!-- <div class="row">
-  <div class="col-sm-6 mb-3 mb-sm-0">
-    <div class="card mt-4">
-      <div class="card-body">
-        <h5 class="card-title">Tech is cool</h5>
-        <p class="card-text">New refrigeration technology on the rise!</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div> --}}
-  
