the final update with the readme

--- a/views/blogposts.handlebars
+++ b/views/blogposts.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-
+{{!-- this handlebar will create a card thru bootstrap that will include the handlebar infor that i passed in thru the routes. The #each will create a new card for each set of data --}}
 <div class="col-sm-12 mb-3 mb-sm-0">
     <div class="card mt-4">
       <div class="card-body">
@@ -16,7 +16,7 @@
 
 </div>
 
-
+{{!-- this handlebar is underneath cards to let the user add comments to existing blogs by the blog id --}}
     <div class="card mt-4 col-sm-12 mb-3 mb-sm-0">
       <div class="card-body">
         <h5> Add a comment!</h5>
