--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
 
-
+{{!-- this handlebar will get all of the blog posts made by the user associated with the dashboard --}}
 {{#each postData as |post|}}
 <div class="col-sm-6 mb-3 mb-sm-0">
     <div class="card mt-4">
@@ -19,7 +19,7 @@
 
 
 
-
+{{!-- this handlebar will allow make the area where the user can add a new blog post --}}
     <div class="card mt-4 col-sm-12 mb-3 mb-sm-0">
       <div class="card-body">
         <h5>Add a New Blog Post</h5>
