--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
+{{!-- this handlebar populates the homepage with sample blogposts --}}
 <div class="row">
 {{#each posts as |post|}}
 <div class="col-sm-6 mb-3 mb-sm-0">
