--- a/views/editblogposts.handlebars
+++ b/views/editblogposts.handlebars
@@ -1,3 +1,4 @@
+{{!-- this handlebar is specifically for editting blog posts, it will get the selected blogpost and put its title and contents in a text area for editting --}}
 <div class="row">
     <div class="card mt-4 col-sm-12 mb-3 mb-sm-0">
       <div class="card-body">
