--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-
+{{!-- the handlebar main layout is the format for each handlebar sub page --}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/{{style}}">
 </head>
+{{!-- this is a bootstrap navbar i found to let the user navigate the blog.  --}}
 <body class="container">
     <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
   <div class="container-fluid">
@@ -28,14 +29,12 @@
           <a class="nav-link active" aria-current="page" href="/loginpage">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Logout</a>
-        </li>
+            <form method="POST" action="/logout">
+          <button type="submit" class="nav-link active btn btn-dark">Logout</button>
+        </form></li>
         
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      
     </div>
   </div>
 </nav>
